# bentley-ottmann-api

./: .dockerignore  .env  .example_env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 7104489f0991_added.py
bentley_ottmann_api/: conf.py  crud.py  dependencies.py  main.py  models.py  schemas.py
bentley_ottmann_api/bentley_ottmann/: __init__.py  algorithm.py  data_structures.py  geometry.py
docs/: bentley_ottmann_api.bentley_ottmann.rst  bentley_ottmann_api.rst  conf.py  index.rst  modules.rst  tests.rst
tests/: test_bentley_otmann.py
